--- a/DesignerRHN/DesignerRHN-war/web/empldemanda.xhtml
+++ b/DesignerRHN/DesignerRHN-war/web/empldemanda.xhtml
@@ -110,7 +110,7 @@
                                     <p:cellEditor>  
                                         <f:facet name="output"><h:outputText value="#{info.seguimiento}" style="width: 100px;text-transform: uppercase"/></f:facet>  
                                         <f:facet name="input">
-                                            <p:inputText value="#{info.seguimiento}" maxlength="500" id="editarSeguimiento" style="border-radius: 0px; width: 93.5%;text-transform: uppercase"> 
+                                            <p:inputText value="#{info.seguimiento}" maxlength="500" id="editarSeguimiento" style="border-radius: 0px; width: 99.5%;text-transform: uppercase"> 
                                                 <p:ajax event="select" listener="#{controlEmplDemanda.cambiarIndiceD(indiceD,1)}" process="@this"/> 
                                                 <p:ajax event="change" listener="#{controlEmplDemanda.modificarDemanda(indiceD)}" process="@this" update="editarSeguimiento"/>
                                             </p:inputText>
@@ -126,15 +126,15 @@
                                     <p:cellEditor>  
                                         <f:facet name="output"><h:outputText value="#{info.motivo.descripcion}" style="width: 100px;text-transform: uppercase"/></f:facet>  
                                         <f:facet name="input">
-                                            <p:inputText value="#{info.motivo.descripcion}" id="editarMotivo" style="border-radius: 0px; width: 93.5%;text-transform: uppercase"> 
+                                            <p:inputText value="#{info.motivo.descripcion}" id="editarMotivo" style="border-radius: 0px; width: 99.5%;text-transform: uppercase"> 
                                                 <p:ajax event="select" listener="#{controlEmplDemanda.cambiarIndiceD(indiceD,2)}" process="@this"/> 
                                                 <p:ajax event="dblclick" listener="#{controlEmplDemanda.asignarIndex(indiceD,0,0)}" process="@this"/>
                                                 <p:ajax event="change" listener="#{controlEmplDemanda.modificarDemanda(indiceD, 'MOTIVOS', info.motivo.descripcion)}" process="@this" update="editarMotivo"/>
                                             </p:inputText>
                                         </f:facet>  
                                     </p:cellEditor>
-                                    <f:facet name="footer">                                        
-                                        <p:commandButton style="width: 100%; height: 16px; border: none; color: blue" value=" "/>
+                                    <f:facet name="footer">   
+                                        <p:commandButton style="width: 400px; margin: -14px; height: 26px; border: none; color: blue" value=" "/>
                                     </f:facet>
                                 </p:column>                               
 
